@@ -7,17 +7,13 @@
     <groupId>vahy</groupId>
     <artifactId>master-thesis</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <modules>
         <module>Commons</module>
-        <module>HallwayGame</module>
         <module>StateSpaceSearch</module>
         <module>ReinforcementLearning</module>
         <module>PaperSandbox</module>
-        <module>RandomWalk</module>
-        <module>SimplifiedHallway</module>
-        <!--        <module>../Examples</module>-->
     </modules>
 
     <properties>
@@ -33,7 +29,7 @@
 
         <logback.version>1.1.11</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <testng.version>6.14.3</testng.version>
+        <junit.version>5.6.2</junit.version>
 
     </properties>
 
@@ -52,9 +48,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -134,6 +136,26 @@
                         <target>13</target>
                         <release>13</release>
                         <!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit -XX:+UseParallelGC
+                        </argLine>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit -XX:+UseParallelGC -server
+                        </argLine>
                     </configuration>
                 </plugin>
             </plugins>
